--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-VITE_API_KEY=
-VITE_AUTH_DOMAIN=
-VITE_DB_URL=
-VITE_STORAGE_BUCKET=
-VITE_SENDER_ID=
-VITE_APP_ID=
+VITE_API_KEY=AIzaSyCr-qe2KXj1GBIed896wZohkBDVaaBT0eU
+VITE_AUTH_DOMAIN=memorygame-e4179.firebaseapp.com
+VITE_DB_URL=https://memorygame-e4179-default-rtdb.firebaseio.com
+VITE_PROJECT_ID=memorygame-e4179
+VITE_STORAGE_BUCKET=memorygame-e4179.appspot.com
+VITE_SENDER_ID=745599649582
+VITE_APP_ID=1:745599649582:web:9769e92424ec60d0905cbf
