--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "bad-words-next": "^2.3.1",
     "firebase": "^10.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
